--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
   } ) ;
 
-     var contractAddressToken = '0x101E0573E704449db6E1f991c3c65429764FFd56';
-     var contractAddressBULOT ='0x01899134779931725AC5e6DDf1Ca8B3f76a5d36B';
+     var contractAddressToken = '0xCEC67116Fb8F95051d70bab0526Efa65CA40F121';
+     var contractAddressBULOT ='0xd2220f47F53eec920a96035eBc99bFEA13e10C8E';
      var abiBulotRaw= [
      	{
      		"constant": false,
@@ -895,7 +895,7 @@ function checkMoneyCollected() {
     <div class="section"><span></span>TICKET AFTER INDEX</div>
         <div class="inner-wrap">
           <label>SPECIFIC TICKET AFTER INDEX
-          <textarea id="lottery_no_last_b_ticket" name="field14">Lottery Number</textarea>
+          <textarea id="lottery_no_ith_b_ticket" name="field14">Lottery Number</textarea>
           <textarea id="index_bought" name="field15">Index</textarea></label>
           <input type="button" onclick="getIthBoughtTicketNo();" value="Get"> </input>
 
